// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckIcon render 1`] = `
<span
  className="check-container"
>
  <span
    className="check-icon"
  />
</span>
`;

exports[`CircleIcon render 1`] = `
<span
  className="check-container"
/>
`;

exports[`CrossIcon render 1`] = `
<span
  className="check-container"
>
  <span
    className="cross-icon"
  />
</span>
`;

exports[`OutcomeIcon render fail 1`] = `<CrossIcon />`;

exports[`OutcomeIcon render incomplete 1`] = `<CircleIcon />`;

exports[`OutcomeIcon render pass 1`] = `<CheckIcon />`;
